# graphql-mongodb-boilerplate

./: .env  Cargo.toml  LICENSE  README.md
src/: db.rs  graphql_schema.rs  main.rs  schema.rs  seed.rs
src/db/: mod.rs  mongo.rs
src/models/: mod.rs  owners.rs  pets.rs
src/routes/: mod.rs
src/routes/graphql/: mod.rs
src/routes/health/: mod.rs
src/routes/pets/: mod.rs
src/schema/: common.rs  mod.rs  owners.rs  pets.rs
src/services/: mod.rs  owners.rs  pets.rs
wrk/: all_pets_gql.lua  all_pets_post.lua
