[package]
name = "graphql-mongodb-boilerplate"
version = "0.1.1"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"
license = "MIT"
keywords = ["graphql", "mongodb", "example", "boilerplate", "starter"]
readme = "README.md"
description = """
A simple Rust graphql service boilerplate using actix, mongodb and juniper
"""
default-run = "main"
repository = "https://github.com/briandeboer/graphql-mongodb-boilerplate"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
bson = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
log = "0.4.8"
mongodb-cursor-pagination = { version = "0.2.0", features = ["graphql"] }
mongodb = "0.9.0"
serde = "1.0"
serde_json = "1.0"