[package]
name = "graphql-mongodb-boilerplate"
version = "0.3.1"
authors = ["Brian DeBoer <bdeboer@noreply.com>"]
edition = "2018"
license = "MIT"
keywords = ["graphql", "mongodb", "example", "boilerplate", "starter"]
readme = "README.md"
description = """
A simple Rust graphql service boilerplate using actix, mongodb and juniper
"""
default-run = "main"
repository = "https://github.com/briandeboer/graphql-mongodb-boilerplate"

[features]
default = []

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
bson = "0.14.1"
cached = "0.12.0"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
juniper = "0.14.2"
log = "0.4.8"
mongodb-cursor-pagination = { version = "0.2.6", features = ["graphql"] }
mongodb-base-service = { version = "0.3.0", features = ["graphql"] }
mongodb = "0.9.2"
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
# optional